--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <h2>My First JavaScript</h2>
 
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
+onclick="document.getElementById('time').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
-<p id="demo"></p>
+<p id="time"></p>
 
 </body>
 </html> 
