🎟👘 Checkpoint ./index.html:30896182/1049 ./script.js:30896182/98

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<!DOCTYPE html>
 <html>
-<body>
-
-<h2>My First JavaScript</h2>
-
-<button type="button"
-onclick="document.getElementById('time').innerHTML = Date()">
-Click me to display Date and Time.</button>
-
-<p id="time"></p>
-
-</body>
-</html> 
+  <head>
+    <title>Structures</title>
+    <script type="text/javascript" src="script.js"></script>
+  </head>
+  <body>
+    <h1>
+      control structures
+    </h1>
+      <ol type="i">
+        <li>if statements</li>
+        <li>if else</li>
+        <li>else if</li>
+        <li>switch statments</li>
+      </ol><hr>
+    <h1>
+      Looping structures
+    </h1>
+    <ol type="i">
+      <li>for loop</li>
+      <li></li>
+    </ol>
+  </body>
+</html>
