🛋🌛 Checkpoint ./index.html:30896182/123 ./script.js:30896182/564

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
         <li>if statements</li>
         <li>if else</li>
         <li>else if</li>
-        <li>switch statments</li>
+        <li id="trial">switch statements</li>
       </ol><hr>
     <h1>
       Looping structures
     </h1>
     <ol type="i">
       <li>for loop</li>
-      <li></li>
+      <li>for in</li>
+      <li>for of</li>
+      <li>while loop</li>
+      <li>do while loop</li>
     </ol>
   </body>
 </html>
