🎃🐟 Checkpoint ./index.html:30896182/33

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>if statements</li>
         <li>if else</li>
         <li>else if</li>
-        <li id="trial">switch statements</li>
+        <li>switch statements</li>
       </ol><hr>
     <h1>
       Looping structures
