👼👙 Checkpoint ./Joe.js:30896182/965 ./index.html:30967933/1828 ./script.js:30896182/64:30967933/586 ./ann.js:30967933/139

--- a/index.html
+++ b/index.html
@@ -23,5 +23,24 @@
       <li>while loop</li>
       <li>do while loop</li>
     </ol>
+     <h1>
+      control structures
+    </h1>
+      <ol type="i">
+        <li>if statements</li>
+        <li>if else</li>
+        <li>else if</li>
+        <li>switch statements</li>
+      </ol><hr>
+    <h1>
+      Looping structures
+    </h1>
+    <ol type="i">
+      <li>for loop</li>
+      <li>for in</li>
+      <li>for of</li>
+      <li>while loop</li>
+      <li>do while loop</li>
+    </ol>
   </body>
 </html>
