👂🎣 Checkpoint ./kevin.js:30896182/223:30967933/4 ./ann.js:30967933/30 ./index.html:30896182/261:30967933/1399

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Structures</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="joe.js"></script>
   </head>
   <body>
     <h1>
@@ -12,7 +12,7 @@
         <li>if else</li>
         <li>else if</li>
         <li>switch statements</li>
-      </ol><hr>
+      </ol>
     <h1>
       Looping structures
     </h1>
@@ -22,8 +22,32 @@
       <li>for of</li>
       <li>while loop</li>
       <li>do while loop</li>
-    </ol>
+    </ol><hr>
+    <script type="text/javascript" src="kevin.js"></script>
      <h1>
+      control structures
+    </h1>
+      <ol type="i">
+        <li>if statements</li>
+        <p>
+        
+        </p>
+        <li>if else</li>
+        <li>else if</li>
+        <li>switch statements</li>
+      </ol>
+    <h1>
+      Looping structures
+    </h1>
+    <ol type="i">
+      <li>for loop</li>
+      <li>for in</li>
+      <li>for of</li>
+      <li>while loop</li>
+      <li>do while loop</li>
+    </ol><hr>
+    <script type="text/javascript" src="ann.js"></script>
+    <h1>
       control structures
     </h1>
       <ol type="i">
@@ -31,7 +55,7 @@
         <li>if else</li>
         <li>else if</li>
         <li>switch statements</li>
-      </ol><hr>
+      </ol>
     <h1>
       Looping structures
     </h1>
@@ -41,6 +65,6 @@
       <li>for of</li>
       <li>while loop</li>
       <li>do while loop</li>
-    </ol>
+    </ol><hr>
   </body>
 </html>
