🌹🎐 Checkpoint ./index.html:30896182/794 ./kevin.js:30896182/514 ./joe.js:30967933/414

--- a/index.html
+++ b/index.html
@@ -27,15 +27,9 @@
      <h1>
       control structures
     </h1>
-      <ol type="i">
-        <li>if statements</li>
-        <p>
-        
-        </p>
-        <li>if else</li>
-        <li>else if</li>
-        <li>switch statements</li>
-      </ol>
+    <p id="demo">
+      
+    </p>
     <h1>
       Looping structures
     </h1>
