✂️🍟 Checkpoint ./kevin.js:30896182/899 ./index.html:30896182/1023

--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
      <h1>
       control structures
     </h1>
-    <p id="demo">
-      
-    </p>
+    <h1>Check largest number </h1>
+        <h2></h2>
+		<br>
+		Enter number 1: <input type="text" id="numberfunction"></input><br>
+		Enter number 2: 
+  <input type="text" id="numbersum">
+  
+  </input> <br>
+        Enter number 3: <input type="text" id="numbertr"></input><br>
+<button onclick="largesstnum()">submit</button>
     <h1>
       Looping structures
     </h1>
