🌝🏢 Checkpoint ./index.html:30896182/1640 ./joe.js:30896182/22:30967933/323 ./kevin.js:30896182/3

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body>
     <h1>
       control structures
-    </h1>
+    </h1><p>
+    
+    </p>
       <ol type="i">
         <li>if statements</li>
         <li>if else</li>
@@ -27,16 +29,16 @@
      <h1>
       control structures
     </h1>
-    <h1>Check largest number </h1>
+        <p> 
+		<h1>Check largest number </h1>
         <h2></h2>
 		<br>
-		Enter number 1: <input type="text" id="numberfunction"></input><br>
-		Enter number 2: 
-  <input type="text" id="numbersum">
-  
-  </input> <br>
-        Enter number 3: <input type="text" id="numbertr"></input><br>
+		Enter number 1:<input type="text" id="numberfunction"> <br>
+		Enter number 2: <input type="text" id="numbersum"><br>
+        Enter number 3: <input type="text" id="numbertr"><br>
 <button onclick="largesstnum()">submit</button>
+    </p>
+		<br>
     <h1>
       Looping structures
     </h1>
