🐚🌟 Checkpoint ./ann.js:30733068/125 ./index.html:30896182/231 ./joe.js:30967933/2

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <body>
     <h1>
       control structures
-    </h1><p>
-    
-    </p>
+    </h1>
       <ol type="i">
         <li>if statements</li>
+        <p>
+          <script type = "text/javascript" src="/joe.js">
+          document.write("<p>" +total + "</p>");
+          </script>
+        </p>
         <li>if else</li>
         <li>else if</li>
         <li>switch statements</li>
