🖼🐟 Checkpoint ./index.html:30896182/7305 ./kevin.js:30896182/1872 ./Kevin.js:30896182/177

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
   <head>
     <title>Structures</title>
-    <script type="text/javascript" src="joe.js"></script>
+    <script type="text/javascript" src="Joseph.js"></script>
+    
   </head>
   <body>
     <h1>
-      control structures
+      Control structures
     </h1>
+    <h2>
+      check the largest of the two numbers
+    </h2>
       <ol type="i">
         <li>if statements</li>
         <p>
-          <script type = "text/javascript" src="/joe.js">
+          <script type = "text/javascript" src="/Joseph.js">
           document.write("<p>" +total + "</p>");
           </script>
         </p>
@@ -28,20 +32,47 @@
       <li>while loop</li>
       <li>do while loop</li>
     </ol><hr>
-    <script type="text/javascript" src="kevin.js"></script>
-     <h1>
-      control structures
-    </h1>
-        <p> 
-		<h1>Check largest number </h1>
-        <h2></h2>
+    <script type="text/javascript" src="Kevin.js"></script>
+     <ol type="i">
+       <li><h1>
+      <i><em>if-else</em></i>
+    </h1> 
+       </li>
+    <p> 
+        <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
 		<br>
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
         Enter number 3: <input type="text" id="numbertr"><br>
 <button onclick="largesstnum()">submit</button>
     </p>
+       <li><h1>
+         if-statements
+         </h1></li><h2 type="text" >
+       
+       </h2>
+    </ol>
 		<br>
+    <h1>
+      Looping stuctures
+    </h1>
+    <ol type="i">
+      <li>for loop</li>
+      <li>for in</li>
+      <li>for of</li>
+      <li>while loop</li>
+      <li>do while loop</li>
+    </ol><hr>
+    <script type="text/javascript" src="Ann.js"></script>
+    <h1>
+      control structures
+    </h1>
+      <ol type="i">
+        <li>if statements</li>
+        <li>if else</li>
+        <li>else if</li>
+        <li>switch statements</li>
+      </ol>
     <h1>
       Looping structures
     </h1>
@@ -52,13 +83,20 @@
       <li>while loop</li>
       <li>do while loop</li>
     </ol><hr>
-    <script type="text/javascript" src="ann.js"></script>
+<script type="text/javascript" src="Gareth.js"></script>
     <h1>
       control structures
     </h1>
       <ol type="i">
         <li>if statements</li>
-        <li>if else</li>
+        <li>if-else</li>
+        <p> 
+		<br>
+		First Number:<input type="text" id="fnOne"> <br>
+		Second Number: <input type="text" id="fnTwo"><br>
+    Third Number: <input type="text" id="fnThree"><br>
+    <button onclick="threeNumLarge()">submit</button>
+    </p>
         <li>else if</li>
         <li>switch statements</li>
       </ol>
