🍰📰 Checkpoint ./Kevin.js:30896182/29 ./index.html:30896182/2495 ./function.js:30896182/896

--- a/index.html
+++ b/index.html
@@ -1,38 +1,8 @@
 <html>
   <head>
-    <title>Structures</title>
-    <script type="text/javascript" src="Joseph.js"></script>
     
-  </head>
-  <body>
-    <h1>
-      Control structures
-    </h1>
-    <h2>
-      check the largest of the two numbers
-    </h2>
-      <ol type="i">
-        <li>if statements</li>
-        <p>
-          <script type = "text/javascript" src="/Joseph.js">
-          document.write("<p>" +total + "</p>");
-          </script>
-        </p>
-        <li>if else</li>
-        <li>else if</li>
-        <li>switch statements</li>
-      </ol>
-    <h1>
-      Looping structures
-    </h1>
-    <ol type="i">
-      <li>for loop</li>
-      <li>for in</li>
-      <li>for of</li>
-      <li>while loop</li>
-      <li>do while loop</li>
-    </ol><hr>
     <script type="text/javascript" src="Kevin.js"></script>
+    <script type="text/javascript" src="function.js"></script>
      <ol type="i">
        <li><h1>
       <i><em>if-else</em></i>
@@ -48,7 +18,7 @@
     </p>
        <li><h1>
          if-statements
-         </h1></li>
+         </h1></li><script type="text/javascript" src="function.js"></script>
     </ol>
 		<br>
     <h1>
@@ -61,52 +31,5 @@
       <li>while loop</li>
       <li>do while loop</li>
     </ol><hr>
-    <script type="text/javascript" src="Ann.js"></script>
-    <h1>
-      control structures
-    </h1>
-      <ol type="i">
-        <li>if statements</li>
-        <li>if else</li>
-        <li>else if</li>
-        <li>switch statements</li>
-      </ol>
-    <h1>
-      Looping structures
-    </h1>
-    <ol type="i">
-      <li>for loop</li>
-      <li>for in</li>
-      <li>for of</li>
-      <li>while loop</li>
-      <li>do while loop</li>
-    </ol><hr>
-<script type="text/javascript" src="Gareth.js"></script>
-    <h1>
-      control structures
-    </h1>
-      <ol type="i">
-        <li>if statements</li>
-        <li>if-else</li>
-        <p> 
-		<br>
-		First Number:<input type="text" id="fnOne"> <br>
-		Second Number: <input type="text" id="fnTwo"><br>
-    Third Number: <input type="text" id="fnThree"><br>
-    <button onclick="threeNumLarge()">submit</button>
-    </p>
-        <li>else if</li>
-        <li>switch statements</li>
-      </ol>
-    <h1>
-      Looping structures
-    </h1>
-    <ol type="i">
-      <li>for loop</li>
-      <li>for in</li>
-      <li>for of</li>
-      <li>while loop</li>
-      <li>do while loop</li>
-    </ol><hr>
-  </body>
+  </head>
 </html>
