--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   <head>
     
     <script type="text/javascript" src="Kevin.js"></script>
-    <script type="text/javascript" src="function.js"></script>
      <ol type="i">
        <li><h1>
       <i><em>if-else</em></i>
@@ -18,7 +17,7 @@
     </p>
        <li><h1>
          if-statements
-         </h1></li><script type="text/javascript" src="function.js"></script>
+         </h1><caption><b><u><mark><em>check largest number between two numbers</em></mark></u></b></caption>
     </ol>
 		<br>
     <h1>
