🐺🐬 Checkpoint ./index.html:30896182/19 ./Kevin.js:30896182/88

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
        <li><h1>
          if-statements
-         </h1><caption><b><u><mark><em>check largest number between two numbers</em></mark></u></b></caption>
+         </h1><caption><b><u><mark><em>check largest number between two numbers</em></mark></u></b></caption></li>
     </ol>
 		<br>
     <h1>
