--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </p>
        <li><h1>
          if-statements
-         </h1><caption><b><u><mark><em>check largest number between two numbers</em></mark></u></b></caption></li>
+         </h1><caption><b><u><mark><em>check largest number between two numbers</em></mark></u></b></caption></li><input id="val">
+<input type="Submit" onclick="run();">
+<p id="results"></p>
     </ol>
 		<br>
     <h1>
