--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
         Enter number 3: <input type="text" id="numbertr"><br>
-<button onclick="largesstnum()">submit</button>
+      <input type="Submit" onclick="load();">
+<p id="numbers"></p>
     </p>
        <li><h1>
          if-statements
-         </h1><caption><b><u><mark><em>check largest number between two numbers</em></mark></u></b></caption></li><input id="val">
+         </h1><caption><b><u><mark><em>sum of the first 10 numbers i.e 1 to 10</em></mark></u></b></caption></li><input id="val">
 <input type="Submit" onclick="run();">
 <p id="results"></p>
     </ol>
