📷🐢 Checkpoint ./Kevin.js:30896182/1252 ./index.html:30896182/287

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
         Enter number 3: <input type="text" id="numbertr"><br>
-      <input type="Submit" onclick="load();">
-<p id="numbers"></p>
+<button onclick="largesstnum()">submit</button>
     </p>
        <li><h1>
          if-statements
