🚣💷 Checkpoint ./Kevin.js:30896182/4 ./index.html:30896182/280

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     
     <script type="text/javascript" src="Kevin.js"></script>
+  </head>
+  <body>
      <ol type="i">
        <li><h1>
       <i><em>if-else</em></i>
@@ -21,16 +23,5 @@
 <input type="Submit" onclick="run();">
 <p id="results"></p>
     </ol>
-		<br>
-    <h1>
-      Looping stuctures
-    </h1>
-    <ol type="i">
-      <li>for loop</li>
-      <li>for in</li>
-      <li>for of</li>
-      <li>while loop</li>
-      <li>do while loop</li>
-    </ol><hr>
-  </head>
+  </body>
 </html>
