🚵🏘 Checkpoint ./index.html:30896182/7905 ./Kevin.js:30896182/8105

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
   <head>
     
     <script type="text/javascript" src="Kevin.js"></script>
-  </head>
-  <body>
      <ol type="i">
        <li><h1>
       <i><em>if-else</em></i>
@@ -14,14 +12,26 @@
 		<br>
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
-        Enter number 3: <input type="text" id="numbertr"><br>
-<button onclick="largesstnum()">submit</button>
+    Enter number 3: <input type="text" id="numbertr"><br>
+<button onclick="largestnum()">submit</button>
     </p>
        <li><h1>
          if-statements
-         </h1><caption><b><u><mark><em>sum of the first 10 numbers i.e 1 to 10</em></mark></u></b></caption></li><input id="val">
+         </h1><caption><b><u><mark><em>sum of the first 10 numbers </em></mark></u></b></caption></li><input id="val">
+<input id="val">
 <input type="Submit" onclick="run();">
 <p id="results"></p>
     </ol>
-  </body>
+		<br>
+    <h1>
+      Looping stuctures
+    </h1>
+    <ol type="i">
+      <li>for loop</li>
+      <li>for in</li>
+      <li>for of</li>
+      <li>while loop</li>
+      <li>do while loop</li>
+    </ol><hr>
+  </head>
 </html>
