--- a/index.html
+++ b/index.html
@@ -1,37 +1,11 @@
 <html>
   <head>
-    
+    <title>Javascript Assignments</title>
+    <h1></h1>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript" src="Kevin.js"></script>
-     <ol type="i">
-       <li><h1>
-      <i><em>if-else</em></i>
-    </h1> 
-       </li>
-    <p> 
-        <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
-		<br>
-		Enter number 1:<input type="text" id="numberfunction"> <br>
-		Enter number 2: <input type="text" id="numbersum"><br>
-    Enter number 3: <input type="text" id="numbertr"><br>
-<button onclick="largestnum()">submit</button>
-    </p>
-       <li><h1>
-         if-statements
-         </h1><caption><b><u><mark><em>sum of the first 10 numbers </em></mark></u></b></caption></li><input id="val">
-<input id="val">
-<input type="Submit" onclick="run();">
-<p id="results"></p>
-    </ol>
-		<br>
-    <h1>
-      Looping stuctures
-    </h1>
-    <ol type="i">
-      <li>for loop</li>
-      <li>for in</li>
-      <li>for of</li>
-      <li>while loop</li>
-      <li>do while loop</li>
-    </ol><hr>
   </head>
+  <body>
+    
+  </body>
 </html>
