🐂🚧 Checkpoint ./index.html:30896182/371 ./Kevin.js:30896182/263

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <script type="text/javascript" src="Kevin.js"></script>
   </head>
   <body>
-    
+     <p> 
+    <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
+		<br>
+		Enter number 1:<input type="text" id="numberfunction"> <br>
+		Enter number 2: <input type="text" id="numbersum"><br>
+    Enter number 3: <input type="text" id="numbertr"><br>
+    <button onclick="largestnum()">submit</button>
+    </p>
   </body>
 </html>
