💘⏰ Checkpoint ./Kevin.js:30896182/3483 ./index.html:30896182/1011

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
     Enter number 3: <input type="text" id="numbertr"><br>
-    <button onclick="largestnum()">submit</button>
+<button onclick="largestnum()">submit</button>
     </p>
+    <input id="val">
+<input type="Submit" onclick="run();">
+<p id="results"></p>
   </body>
 </html>
