📕⛸ Checkpoint ./index.html:30896182/3349 ./Kevin.js:30896182/174

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript" src="Kevin.js"></script>
   </head>
-  <body>
+  <body><h2>
+    
+    </h2>
      <p> 
     <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
 		<br>
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
     Enter number 3: <input type="text" id="numbertr"><br>
-<button onclick="largestnum()">submit</button>
+<input type="submit" onclick="largestnum();">
     </p>
     <input id="val">
 <input type="Submit" onclick="run();">
-<p id="results"></p>
   </body>
 </html>
