🍉💿 Checkpoint ./index.html:30896182/274 ./Kevin.js:30896182/702 ./style.css:30896182/32

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 		Enter number 1:<input type="text" id="numberfunction"> <br>
 		Enter number 2: <input type="text" id="numbersum"><br>
     Enter number 3: <input type="text" id="numbertr"><br>
-<input type="submit" onclick="largestnum();">
+<input type="submit" onclick="largestnum()">
     </p>
     <input id="val">
 <input type="Submit" onclick="run();">
+<p id="results"></p>
+    <p id="demo">
+      
+    </p>
   </body>
 </html>
