🏯🐈 Checkpoint ./index.html:30896182/829 ./Kevin.js:30896182/403

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <input type="Submit" onclick="run();">
 <p id="results"></p>
     <p id="demo">
-      
+      <input type="Submit" onclick="date();">
     </p>
   </body>
 </html>
