🚐🛬 Checkpoint ./index.html:30896182/289 ./Kevin.js:30896182/34 ./style.css:30896182/41

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript" src="Kevin.js"></script>
   </head>
-  <body><h2>
-    
-    </h2>
+  <body>
+    <ol type="1">
+      <li>If else</li>
      <p> 
     <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
 		<br>
@@ -16,11 +16,14 @@
     Enter number 3: <input type="text" id="numbertr"><br>
 <input type="submit" onclick="largestnum()">
     </p>
+      <li>if else statements to check sum of first 10 numbers</li>
     <input id="val">
 <input type="Submit" onclick="run();">
 <p id="results"></p>
+      <li>Switch statements for date</li>
     <p id="demo">
       <input type="Submit" onclick="date();">
     </p>
+    </ol>
   </body>
 </html>
