--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <ol type="1">
       <li>if statements</li><p> 
-    <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
+    <caption align="center"><mark><b><u>Check largest number between 2 numbers</u></b></mark></caption>
 		<br>
 		Enter number 1:<input type="text" id="numberfunc"> <br>
 		Enter number 2: <input type="text" id="numbertotal"><br>
@@ -28,7 +28,7 @@
 <input type="Submit" onclick="run();">
 <p id="results"></p>
       <li>Switch statements for date</li>
-    <p id="demo">
+    <p id="trial">
       <input type="Submit" onclick="date();">
     </p>
     </ol>
