--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
     Enter number 3: <input type="text" id="numbertr"><br>
 <input type="submit" onclick="largestnum()">
     </p>
-      <li>if else statements to check sum of first 10 numbers</li>
-    <input id="val">
-<input type="Submit" onclick="run();">
-<p id="results"></p>
       <li>Switch statements for date</li>
     <p id="trial">
       <input type="Submit" onclick="date();">
     </p>
+      <li>if else ladder to display days of the week</li>
+      <li>for statements to check sum of first 10 numbers</li>
+    <input id="val">
+<input type="Submit" onclick="run();">
+<p id="results"></p>
+      <li>while statement to check sum of the first 10 numbers</li>
+      <li>do-while statement for checking sum of the first 10 numbers</li>
     </ol>
   </body>
 </html>
