💺🍁 Checkpoint ./Kevin.js:30896182/40 ./index.html:30896182/2

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </p>
       <li>Switch statements for date</li>
     <p id="trial">
-      <input type="Submit" onclick="date();">
+      <input type="Submit" onclick="date()">
     </p>
-      <li>if else ladder to display days of the week</li>
+      <li>if else ladder to display day of the week</li>
       <li>for statements to check sum of first 10 numbers</li>
     <input id="val">
 <input type="Submit" onclick="run();">
