--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <input id="val">
 <input type="Submit" onclick="run();">
 <p id="results"></p>
-      <li>while statement to check sum of the first 10 numbers</li>
+      <li>while statement to check sum of the first 10 numbers</li><button onclick="myFunction()">Try it</button>
+
+<p id="demo"></p>
       <li>do-while statement for checking sum of the first 10 numbers</li>
     </ol>
   </body>
