🎣🎋 Checkpoint ./index.html:30896182/108 ./Kevin.js:30896182/524

--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
     </p>
       <li>if else ladder to display day of the week</li>
       <li>for statements to check sum of first 10 numbers</li>
-    <input id="val">
-<input type="Submit" onclick="run();">
-<p id="results"></p>
-      <li>while statement to check sum of the first 10 numbers</li><button onclick="myFunction()">Try it</button>
+      <li>while statement to check sum of the first 10 numbers</li>
+      <button onclick="myFunction()">Try it</button>
 
 <p id="demo"></p>
       <li>do-while statement for checking sum of the first 10 numbers</li>
