🚆🍋 Checkpoint ./index.html:30896182/419 ./Kevin.js:30896182/103

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
   </head>
   <body>
     <ol type="1">
-      <li>if statements</li><p> 
-    <caption align="center"><mark><b><u>Check largest number between 2 numbers</u></b></mark></caption>
-		<br>
-		Enter number 1:<input type="text" id="numberfunc"> <br>
-		Enter number 2: <input type="text" id="numbertotal"><br>
-<input type="submit" onclick="largenumber()">
-    </p>
+      <li>if statements</li><button onclick="largenumber()">
+      large number
+      </button><p id="tray"></p>
       <li>If else</li>
      <p> 
     <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
