🐫🎌 Checkpoint ./Kevin.js:30896182/1644 ./index.html:30896182/1297

--- a/index.html
+++ b/index.html
@@ -7,22 +7,10 @@
   </head>
   <body>
     <ol type="1">
-      <li>if statements</li><p> 
-    <caption align="center"><mark><b><u>Check largest number between 2 numbers</u></b></mark></caption>
-		<br>
-		Enter number 1:<input type="text" id="numberfunc"> <br>
-		Enter number 2: <input type="text" id="numbertotal"><br>
-<input type="submit" onclick="largenumber()">
-    </p>
+      <li>if statements</li>
+      <button onclick="myFunction()">Check the largest number between 2 numbers</button><p id="demo"></p>
       <li>If else</li>
-     <p> 
-    <caption align="center"><mark><b><u>Check largest number between 3 numbers</u></b></mark></caption>
-		<br>
-		Enter number 1:<input type="text" id="numberfunction"> <br>
-		Enter number 2: <input type="text" id="numbersum"><br>
-    Enter number 3: <input type="text" id="numbertr"><br>
-<input type="submit" onclick="largestnum()">
-    </p>
+      <button onclick="amazing()">Check the largest number between 3 numbers</button><p id="large"></p>
       <li>Switch statements for date</li>
     <p id="trial">
       <input type="Submit" onclick="date()">
@@ -30,9 +18,6 @@
       <li>if else ladder to display day of the week</li>
       <li>for statements to check sum of first 10 numbers</li>
       <li>while statement to check sum of the first 10 numbers</li>
-      <button onclick="myFunction()">Try it</button>
-
-<p id="demo"></p>
       <li>do-while statement for checking sum of the first 10 numbers</li>
     </ol>
   </body>
