--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button onclick="amazing()">Check the largest number between 3 numbers</button><p id="large"></p>
       
       <li>if else ladder to display day of the week</li>
+      <button onclick="display()">displays current day of the week</button><p id="wow"></p>
       
       <li>Switch statements for date</li>
       <button onclick="date()">displays current day of the week</button><p id="trial"></p>
