💨🌺 Checkpoint ./Kevin.js:30896182/164 ./index.html:30896182/92

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <button onclick="tea()">sum of the numbers 1-10</button><p id="add"></p>
       
       <li>do-while statement for checking sum of the first 10 numbers</li>
+      <button onclick="add()">sum of the numbers 1-10</button><p id="test"></p>
       
     </ol>
   </body>
