🔋📯 Checkpoint ./index.html:30896182/4 ./style.css:30896182/38 ./Kevin.js:30896182/15429

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Javascript Assignments</title>
-    <h1 style="color:blue ">a world of finite posibilities</h1>
+    <h1 style="color:blue ">A world of infinite posibilities</h1>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script type="text/javascript" src="Kevin.js"></script>
   </head>
